# mcmap

./: .gitignore  Cargo.toml  JSON_OUTPUT.md  README.md  idmap.json  palette.json
.claude/skills/version-bump/: SKILL.md
.claude/skills/version-bump/agents/: openai.yaml
.codex/skills/version-bump/: SKILL.md
.github/workflows/: integration.yml  prune-inhabited.yml  release.yml
scripts/: decompress_chunk.py  dump_ids.py  dump_section.py  inspect_chunk.py  inspect_leveldat.py
src/: chown.rs  main.rs  output.rs
src/anvil/: block.rs  chunk.rs  mod.rs  palette.rs  pipeline.rs  region.rs  render.rs
src/anvil/legacy/: chunk.rs  chunk_forge112.rs  mod.rs  palette.rs  render.rs
src/anvil/modern/: chunk.rs  mod.rs  render.rs
src/commands/: analyze.rs  dim.rs  download_client.rs  gen_palette.rs  heightmap.rs  mod.rs  prune_inhabited.rs  region_io.rs  remove_chunks.rs  render.rs  replace_chunks.rs  util.rs
src/commands/extract_ftb_claims/: detect.rs  dim.rs  latmod_json.rs  mod.rs  output.rs  per_team_nbt.rs  snbt.rs  snbt_parser.rs  universe_dat.rs  uuid_util.rs
src/commands/extract_players/: coordinates.rs  discover.rs  mod.rs  output.rs
src/commands/gen_palette/: color.rs  forge_v12.rs  legacy_v17.rs  leveldat.rs  mod.rs  modern.rs  packs.rs  postprocess.rs  raw.rs  resolve.rs
src/commands/gen_palette/forge112/: leveldat.rs  mod.rs
src/commands/gen_palette/legacy/: leveldat.rs  mod.rs
src/commands/gen_palette/legacy_pack/: mod.rs  packs.rs  resolve.rs
src/commands/gen_palette/modern_pack/: mod.rs  packs.rs  postprocess.rs  raw.rs  resolve.rs
src/commands/gen_palette/shared/: color.rs  mod.rs  output.rs  overrides.rs  progress.rs  vanilla_1x.rs
src/commands/gen_palette_forge112/: leveldat.rs  mod.rs
src/commands/gen_palette_legacy/: leveldat.rs  mod.rs  packs.rs  resolve.rs  vanilla.rs
tests/integration/: asserts.py  cache.py  conftest.py  flavors.py  level_dat.py  mcclient.py  palette.py  pyproject.toml  run-local.sh  server.py  test_analyze.py  test_download_client.py  test_gen_palette.py  test_prune_inhabited.py  test_remove_chunks.py  test_render.py  test_replace_chunks.py
