[package]
name = "mcmap"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
env_logger = "0.11.8"
fastanvil = "0.32.0"
fastnbt = "2.6.0"
flate2 = "1.1.5"
image = "0.23"
log = "0.4.28"
num_enum = "0.7.5"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
