[package]
name = "mcmap"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
env_logger = "0.11.8"
fastanvil = "0.32.0"
flate2 = { version = "1.1.5", default-features = false, features = ["zlib-rs"] }
image = "0.23"
log = "0.4.28"
rayon = "1.11.0"
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
# Whole-program optimizations. Slower to compile but noticeably faster
# for hot paths (NBT parsing, palette lookups) which live in different
# crates — LTO lets the optimizer inline across the boundary.
lto = "fat"
codegen-units = 1
